Fix spelling error

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <h2>THE ALPACALYPSE IS IMMINENT</h2>
   </div>
 
-  <img src="/alpaca_evil.jpgs" alt="Evil Alpaca Logo" class="logo">
+  <img src="alpaca_evil.jpg" alt="Evil Alpaca Logo" class="logo">
 
   <div class="countdown">
     Time until Alpacalypse: <span id="timer">Loading...</span>
