Update background color to match graphic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   body {
     margin: 0;
     padding: 0;
-    background: #1a0f0f;
+    background: #251b1e;
     color: #ff3333;
     font-family: 'Courier New', monospace;
     overflow-x: hidden;
